k3s-cluster-automate/manifests/sillytavern/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sillytavern
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: sillytavern
---
